# blue-octopus

./: .gitignore  README.md  main.tf  validate_modules.sh
.devcenter/dev-box/dsc-configurations/: common-config.dsc.yaml
.devcontainer/: devcontainer-lock.json  devcontainer.json
catalog/_starter/: locals.tf  providers.tf  roles.tf  sto.tf  variables.tf
catalog/aca-scenarios/WIP - internal-mode-custom-domain/: README.md  appgw.tf  bastion.tf  ca-job.tf  ca.tf  cae.tf  dns_link.tf  dns_zone.tf  locals.tf  nsg.tf  providers.tf  public_ip.tf  sto.tf  subnets.tf  vm.tf
catalog/aca-scenarios/devops-runners/: README.md  acr.tf  app.tf  ca-job.tf  cae.tf  dns_link.tf  dns_zone.tf  identity.tf  key_vault.tf  locals.tf  pe.tf  plan.tf  providers.tf  roles.tf  subnets.tf  variables.tf  vm.tf
catalog/aca-scenarios/dynamic-sessions/src/langchain-dynamic-sessions/: main.py  pyproject.toml  tools.py
catalog/aca-scenarios/dynamic-sessions/src/microsoft-agent-framework/: main.py  pyproject.toml
catalog/aca-scenarios/dynamic_sessions/src/agent-sample/: README.md  main.py  pyproject.toml  pyrightconfig.json
catalog/aca-scenarios/dynamic_sessions/src/microsoft-agent-framework/dynamic-sessions-tool/: pyproject.toml
catalog/aca-scenarios/dynamic_sessions/src/microsoft-agent-framework/dynamic-sessions-tool/dynamic_sessions_tool/: __init__.py  client.py  tools.py
catalog/aca-scenarios/internal-mode/: ca.tf  dns_link.tf  dns_zone.tf  locals.tf  subnets.tf  variables.tf
catalog/acs-scenarios/call-automation/: acs.tf  ai_project.tf  ai_services.tf  data.tf  evgs.tf  identity.tf  locals.tf  open_ai.tf  providers.tf  roles.tf  variables.tf
catalog/ai/: open_ai.tf  variables.tf
catalog/ai-foundry/: ai_hub.tf  ai_services.tf  locals.tf  sto.tf
catalog/ai-scenarios/ai-basics/: ai_search.tf  document-intelligence.tf  locals.tf  providers.tf  roles.tf  sto.tf  variables.tf
catalog/ai-scenarios/ai-foundry/: ai_project.tf  open_ai.tf  variables.tf
catalog/ai-scenarios/ai-gateway/: api.tf  apim.tf  backends.tf  data.tf  locals.tf  open_ai.tf  outputs.tf  roles.tf  subscriptions.tf
catalog/ai-scenarios/ms-foundry/src/langgraph-agents/: .env.template  Dockerfile  demo.http  main.py  pyproject.toml
catalog/ai-scenarios/ms-foundry/src/langgraph-agents/models/: draft_state.py
catalog/ai-scenarios/ms-foundry/src/microsoft_agent_framework/: .dockerignore  demo.http  main.py  pyproject.toml
catalog/ai-scenarios/ms-foundry/src/microsoft_agent_framework/auth/: toolbox_auth.py
catalog/ai-scenarios/ms-foundry/src/microsoft_agent_framework/executors/: coordinator.py
catalog/ai-scenarios/ms-foundry/src/microsoft_agent_framework/models/: draft_review_request.py
catalog/api-center-scenarios/overview/: api.tf  api_center.tf  api_center_integration.tf  api_mcp.tf  apim.tf  apim_products.tf  backends.tf  locals.tf  operations.tf  providers.tf  roles.tf
catalog/apim-scenarios/ai-gateway/: .env.example  aai.tf  api.tf  apim.tf  backend_pool.tf  backends.tf  data.tf  locals.tf  log.tf  main.py  open_ai.tf  outputs.tf  policies.tf  providers.tf  requirements.txt  roles.tf  subscriptions.tf  variables.tf  workbook.tf
catalog/apim-scenarios/internal-mode/: apim.tf  dns_zone.tf  environment.yaml  providers.tf  variables.tf  vm.tf
catalog/apim-scenarios/mcp/: apim.tf  locals.tf
catalog/apim-scenarios/model-gateway-foundry/: aai.tf  (+14 more)
terraform/: acr.tf  catalogs.tf  data.tf  dev_box_definitions.tf  dev_box_pools.tf  dev_center.tf  dev_center_env_types.tf  env.tfvars.tpl  gallery.tf  identity.tf  key_vault.tf  locals.tf  network_connection.tf  projects.tf  providers.tf  roles.tf  variables.tf  vnet.tf
wip/ai-gateway/: aai.tf  api.tf  apim.tf  backends.tf  diagnostic_settings.tf  locals.tf  log.tf  open_ai.tf  roles.tf  variables.tf
wip/multi-region/: apim.tf  diagnostic_settings.tf  locals.tf  nsg.tf  providers.tf  subnets.tf  variables.tf  vnet.tf  vnet_peering.tf
(+297 files in other folders)
