[project]
name = "langchain-dynamic-sessions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity==1.25.3",
    "langchain-azure-dynamic-sessions==1.0.3",
    "azure-ai-projects==2.3.0",
    "dotenv==0.9.9",
    "langchain==1.3.11",
    "langchain-azure-ai[opentelemetry]==1.2.3",
]
