[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=2.3.0",
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-azure-ai[hosting]==1.2.8",
]

[tool.uv]
prerelease = "allow"
