[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects==2.3.0",
    "dotenv==0.9.9",
    "httpx==0.28.1",
    "langchain==1.3.11",
    "langchain-azure-ai[hosting,opentelemetry,tools]==1.2.8",
    "langchain-mcp-adapters==0.3.0",
    "mcp==1.28.1",
]

[tool.uv]
prerelease = "allow"
